# Linkpoint

./: -$Lambda$0R0mXpfMxrM5lCygN3JijOMDexU.java  -$Lambda$1YF5tPpIlUnjvWeNVttYc5eIlFY.java  -$Lambda$3DowF6pLKgVjVrTY9aZKQ2J3cf0.java  -$Lambda$3htMVvcf7XlS6QCgMv3cESjj4go.java  -$Lambda$CF5cnl0on0-506QrOcvyL8_AER8.java  -$Lambda$D7hbGKuty0crHscG-TIL-CtFXqo.java  -$Lambda$FQ4ueWG6sVQMwgP3YGPP2nbRyFo.java  -$Lambda$K1xWCpEh0d4XNuVVYxGUJwEFRxU.java  -$Lambda$SNlq3T7EFvfEVtJpS5BhPof2E2o.java  -$Lambda$W2IjgG3sQFB-K_ukBg8_XysJz_I.java  -$Lambda$YxYPv04qlnFzJCNumOXxffqwZwU.java  -$Lambda$paN_qX4OegT79dFg6kmGbliJfA0.java  -$Lambda$psFcS6-5kKyuCZBH4SbOZwtpXG8.java  -$Lambda$rbwdofHzZNihI1HZoTkj8gWFECo.java  -$Lambda$s15PKVbd3BFZx563Ff4DOHT5V_w.java  -$Lambda$swF2K5wPKI2_xA-bWP-XwHVnywU.java  .coderabbit.yaml  .gitignore  APK_OPERATIONAL_STATUS.md  AUTOMATED_BUILD_SUMMARY.md  AnimationCache.java  AudioManagerWrapper.java  BUILD_AND_DEPLOY_INSTRUCTIONS.md  CLI_EDITOR_GUIDE.md  COMPLETE_PROJECT_STATUS.md  COMPREHENSIVE_APP_DESIGN_DOCUMENT.md  CRITICAL_FIXES_COMPLETED.md  CachedAsset.java  DEPLOYMENT_PACKAGE_README.md  DIRECT_APK_TEST.md  DaoManager.java  DrawableTextBitmap.java  FILE_INVENTORY_IMPLEMENTATION_SUMMARY.md  FINAL_AAPT2_FIX.md  FINAL_DEPLOYMENT_READINESS.md  FINAL_MISSION_COMPLETE.md  FlexiPrimProgram.java  GLLoadedTextTexture.java  GLResourceManager.java  GridConnectionManager.java  (+74 more)
.emergent/: emergent.yml
.github/: BUILD_PIPELINE.md  copilot-instructions.md
.github/workflows/: build-release.yml  quick-release.yml
ai-tools/: README.md  setup-and-build.sh
app/: build.gradle
app/resources/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml  AndroidManifest.xml.backup
app/src/main/cpp/: CMakeLists.txt  README.md
app/src/main/cpp/jni/: audio_stubs.cpp  basis_transcoder_jni.cpp  basis_transcoder_stub.cpp  openjpeg_basis_integration.cpp  openjpeg_real_implementation.cpp  rawbuf_stub.cpp  vivox_stubs.cpp  zero_decode_implementation.cpp
app/src/main/cpp/zstd/: zstd.h
docs/: AAPT2_ARM64_TROUBLESHOOTING.md  API_Analysis_and_Improvements.md  API_Usage_Catalog.md  BUILDING_APK_STEP_BY_STEP.md  Basis_Universal_Integration.md  Broken_Code_Analysis_and_Fixes.md  CPP_Integration_Guide.md  Dex_Extraction_Report.md  Final_Implementation_Summary.md  GHIDRA_INTEGRATION_SUMMARY.md  Getting_Started_Guide.md  Graphics_Engine_Modernization_Plan.md  Graphics_Engine_Modernization_Plan.md.backup  Graphics_Engine_Roadmap.md  Implementation_Roadmap.md  Integration_Summary.md  LibreMetaverse_Integration.md  Lumiya_Modernization_Guide.md  Modern_Components_API_Documentation.md  OpenSimulator_Compatibility.md  Plugin_Integration_Complete.md  README.md  Research_Summary.md  Sample_Application_User_Guide.md  Second_Life_Integration_Guide.md  Second_Life_Open_Source_Portal_Integration_Guide.md  Troubleshooting_Second_Life_Integration.md  UI_Enhancements_Visual_Guide.md
docs/ghidra_analysis/: README.md  comprehensive_analysis_report.json  comprehensive_analysis_summary.md  dex_structure_analysis.json  ghidra_analysis_report.md  source_structure_comparison.json
gradle/scripts/: universal-aapt2.gradle
gradle/wrapper/: gradle-wrapper.properties
lumiya_build/: AndroidManifest.xml.orig  apktool.yml
lumiya_build/res/values/: strings.xml
manual_apk/: AndroidManifest.xml
resources/: AndroidManifest.xml
resources/assets/character/: avatar_params.xml
resources/assets/windlight/: A%2D3AM.xml  A%2D3PM.xml  A%2D6PM.xml  A%2D9PM.xml
resources/res/drawable/: btn_primary_bg_normal.xml  btn_primary_bg_pressed.xml  fab_shape_move_control.xml  fab_shape_move_control_green.xml  fab_shape_move_control_pink.xml  ic_tab_card.xml  object_popups_counter_background_pink.xml  round_rect_shape.xml  round_rect_shape_pink.xml  voice_speaking_indicator_right.xml
resources/res/layout/: cardboard_controls.xml  chat.xml  chat_message.xml  chat_message_dialog.xml  chat_message_plain.xml  contact_list_item.xml  contacts_group.xml  contribute_land_dialog_box_layout.xml  group_profile_tab_members.xml  group_role_details_layout.xml  group_role_member_list_item.xml  minimap_fragment.xml  minimap_user_item.xml  minimap_users.xml  object_pay_dialog.xml  object_popups_single_fragment_layout.xml  outfit_folder.xml  script_dialog.xml  search_grid_action_view.xml  settings_page_selector.xml  split_selector.xml  teleport_slurl.xml  text_field_dialog.xml  touchable_object_list.xml  transition_view.xml  ui_layer_with_portrait_support.xml  user_profile_tab_groups.xml
resources/res/layout-land/: back_button.xml  settings_button.xml
resources/res/layout-land-v17/: back_button.xml
resources/res/layout-v11/: preference.xml
resources/res/layout-v17/: preference.xml  preference_dropdown.xml  preference_material.xml  voice_status.xml
resources/res/menu/: group_member_roles_menu.xml  inventory_item_menu.xml  manage_grids_menu.xml  notecard_menu.xml  object_popups_action_menu.xml  (+4 more)
scripts/: convert_textures.sh  emulator_manager.sh  generate_file_inventory.sh  generate_individual_reviews.sh  ghidra_comparison.py  run_ghidra_analysis.sh
simple_build/: build.gradle  settings.gradle
sources/butterknife/: ButterKnife.java
sources/okhttp3/: Address.java  Cache.java  CacheControl.java  CertificatePinner.java  Challenge.java  CipherSuite.java  ConnectionPool.java  ConnectionSpec.java  Cookie.java  Dispatcher.java  FormBody.java  Handshake.java  Headers.java  HttpUrl.java  MediaType.java  MultipartBody.java  OkHttpClient.java  RealCall.java  Request.java  RequestBody.java  Response.java  ResponseBody.java  Route.java  TlsVersion.java
sources/okio/: AsyncTimeout.java  Base64.java  Buffer.java  ByteString.java  DeflaterSink.java  GzipSink.java  GzipSource.java  HashingSink.java  HashingSource.java  InflaterSource.java  Okio.java  Pipe.java  RealBufferedSink.java  RealBufferedSource.java  Segment.java  SegmentPool.java  SegmentedByteString.java  Timeout.java  Util.java
temp_java/: MainActivity.java
template_extracted/: AndroidManifest.xml  resources.arsc
voice_plugin_decompiled/: AndroidManifest.xml  apktool.yml
(+7265 files in other folders)
